Tweak spacings & fix spacing values

--- a/app/styles/au-kaleidos-css/_auk-u-spacer.scss
+++ b/app/styles/au-kaleidos-css/_auk-u-spacer.scss
@@ -49,6 +49,10 @@
   margin-bottom: 2rem !important;
 }
 
+.auk-u-mb-6 {
+  margin-bottom: 3rem !important;
+}
+
 .auk-u-mb-8 {
   margin-bottom: 4rem !important;
 }
@@ -122,7 +126,7 @@
 }
 
 .auk-u-mx-2 {
-  margin: 0 2rem !important;
+  margin: 0 1rem !important;
 }
 
 .auk-u-mx-3 {
@@ -139,7 +143,7 @@
 }
 
 .auk-u-my-2 {
-  margin: 1.5rem 0 !important;
+  margin: 1rem 0 !important;
 }
 
 .auk-u-my-3 {
@@ -165,7 +169,7 @@
 }
 
 .auk-u-p-2 {
-  padding: 1.5rem !important;
+  padding: 1rem !important;
 }
 
 .auk-u-p-3 {
@@ -187,7 +191,7 @@
 }
 
 .auk-u-pb-2 {
-  padding: 0 0 1.5rem !important;
+  padding: 0 0 1rem !important;
 }
 
 .auk-u-pb-3 {
